tests/success/simple_expression_sequence.tig
print(("abc";1;"salida\n"))
