tests/fail/and_operator_invalid_type_operands.tig
(
    if 1 & "abc" then ();
    if "abc" & 1 then ();
    if ("abc") & nil then ()
)
